fromenv/tests/ui/05-unsupported-meta.stderr
error: Unknown field: `invalid`
 --> tests/ui/05-unsupported-meta.rs:5:17
  |
5 |     #[env(from, invalid)]
  |                 ^^^^^^^
